<resources>
    <string name="app_name">Workoutio</string>
    <string name="day">Day</string>
    <string name="history">History</string>
    <string name="quantity">Quantity</string>
    <string name="time">Time</string>
    <string name="negative">Negative</string>
    <string name="can_more">Can more</string>
    <string name="exercise">Exercise</string>
    <string name="hour">Hour</string>
    <string name="save">save</string>
    <string name="continue_workout">continue&#10;workout</string>
    <string name="Custom">Custom</string>
    <string name="custom">custom</string>
    <string name="undo">undo</string>
    <string name="back">back</string>
    <string name="start">start</string>
    <string name="add">add</string>
    <string name="exercise_name">exercise name</string>
    <string name="exercise_group_name">exercise group name</string>
    <string name="finish">finish</string>
    <string name="workout_time">Workout time</string>
    <string name="edit">edit</string>
</resources>