<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/add_menuContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<androidx.cardview.widget.CardView
    android:id="@+id/add_menuCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hardDark"
        android:padding="4dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/add_menuExerciseNametextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/hardDark"
            android:hint="@string/exercise"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginRight="8dp"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintBottom_toTopOf="@id/add_menuVerticalBreakGuideline"
            app:layout_constraintEnd_toStartOf="@id/add_menuDateEditText"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_menuDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="date"
            android:inputType="date"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/add_menuVerticalBreakGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/add_menuExerciseNametextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/add_menuVerticalBreakGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="64dp" />

        <TextView
            android:id="@+id/add_menuQuantityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_menuTimeTextView"
            app:layout_constraintTop_toBottomOf="@id/add_menuVerticalBreakGuideline"
            app:layout_constraintBottom_toTopOf="@id/add_menuQuantityEditText" />

        <TextView
            android:id="@+id/add_menuTimeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toBottomOf="@id/add_menuVerticalBreakGuideline"
            app:layout_constraintBottom_toTopOf="@id/add_menuTimeEditText"
            app:layout_constraintStart_toEndOf="@id/add_menuQuantityTextView"
            app:layout_constraintEnd_toStartOf="@id/add_menuHourTextView"/>

        <TextView
            android:id="@+id/add_menuHourTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintEnd_toStartOf="@id/add_menuNegativeTextView"
            app:layout_constraintStart_toEndOf="@id/add_menuTimeTextView"
            app:layout_constraintTop_toBottomOf="@id/add_menuVerticalBreakGuideline"/>

        <TextView
            android:id="@+id/add_menuNegativeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/negative"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/add_menuCanMoreTextView"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/add_menuHourTextView"
            app:layout_constraintTop_toBottomOf="@id/add_menuVerticalBreakGuideline"/>

        <TextView
            android:id="@+id/add_menuCanMoreTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/can_more"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toBottomOf="@id/add_menuVerticalBreakGuideline"
            app:layout_constraintStart_toEndOf="@id/add_menuNegativeTextView"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_menuQuantityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:duplicateParentState="false"
            android:inputType="number"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/add_menuAddButton"
            app:layout_constraintEnd_toStartOf="@id/add_menuTimeEditText"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_menuQuantityTextView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_menuTimeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="number"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/add_menuAddButton"
            app:layout_constraintEnd_toStartOf="@id/add_menuHourEditText"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/add_menuQuantityEditText"
            app:layout_constraintTop_toBottomOf="@id/add_menuTimeTextView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_menuHourEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="number"
            android:gravity="center"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/add_menuAddButton"
            app:layout_constraintEnd_toStartOf="@id/add_menuNegativeCheckBox"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@id/add_menuTimeEditText"
            app:layout_constraintTop_toBottomOf="@id/add_menuHourTextView" />

        <com.example.workout.model.helper.CheckableImageView
            android:id="@+id/add_menuNegativeCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintBottom_toTopOf="@id/add_menuAddButton"
            app:layout_constraintEnd_toStartOf="@id/add_menuCanMoreCheckBox"
            app:layout_constraintStart_toEndOf="@id/add_menuHourEditText"
            app:layout_constraintTop_toBottomOf="@id/add_menuNegativeTextView"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/toggle_button_checkbox_style"/>

        <com.example.workout.model.helper.CheckableImageView
            android:id="@+id/add_menuCanMoreCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_weight="2"
            android:src="@drawable/toggle_button_checkbox_style"
            app:layout_constraintTop_toBottomOf="@id/add_menuCanMoreTextView"
            app:layout_constraintBottom_toTopOf="@id/add_menuAddButton"
            app:layout_constraintStart_toEndOf="@id/add_menuNegativeCheckBox"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!--
        <ToggleButton
            android:id="@+id/add_menuCanMoreCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_weight="2"
            android:background="@color/mediumDark"
            app:layout_constraintTop_toBottomOf="@id/add_menuCanMoreTextView"
            app:layout_constraintBottom_toTopOf="@id/add_menuAddButton"
            app:layout_constraintStart_toEndOf="@id/add_menuNegativeLinearLayout"
            app:layout_constraintEnd_toEndOf="parent" />
        -->

        <Button
            android:id="@+id/add_menuAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@color/mediumDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>
































