<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="10">

    <include
        android:id="@+id/appToolbar"
        layout="@layout/app_toolbar"/>

   <androidx.fragment.app.FragmentContainerView
       android:id="@+id/workout_activity_primaryFragmentContainer"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_weight="5" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/workout_activity_secondaryFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:weightSum="2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workout_activity_workoutRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/workout_activity_doneExercises_bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="gone">

        <TextView
            android:id="@+id/workout_activity_doneExercises_remainingExercisesTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="Remaining exercises"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/workout_activity_doneExercises_workoutTimeTextView"
            app:layout_constraintBottom_toTopOf="@id/workout_activity_doneExercises_remainingExercisesNumberTextView"/>

        <TextView
            android:id="@+id/workout_activity_doneExercises_remainingExercisesNumberTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/workout_activity_doneExercises_remainingExercisesTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/workout_activity_doneExercises_workoutTimeChronometer"
            app:layout_constraintBottom_toTopOf="@id/workout_activity_doneExercises_continueButton"/>

        <TextView
            android:id="@+id/workout_activity_doneExercises_workoutTimeTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/workout_time"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/workout_activity_doneExercises_remainingExercisesTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/workout_activity_doneExercises_workoutTimeChronometer"/>


        <com.example.workout.model.helper.Chronometer
            android:id="@+id/workout_activity_doneExercises_workoutTimeChronometer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@id/workout_activity_doneExercises_workoutTimeTextView"
            app:layout_constraintStart_toEndOf="@id/workout_activity_doneExercises_remainingExercisesNumberTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/workout_activity_doneExercises_finishButton"/>

        <Button
            android:id="@+id/workout_activity_doneExercises_continueButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintHorizontal_weight="1"
            android:textStyle="bold"
            android:text="@string/continue_workout"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/workout_activity_doneExercises_remainingExercisesNumberTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/workout_activity_doneExercises_finishButton"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/workout_activity_doneExercises_finishButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintHorizontal_weight="1"
            android:textStyle="bold"
            android:text="@string/finish"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/workout_activity_doneExercises_workoutTimeChronometer"
            app:layout_constraintStart_toEndOf="@id/workout_activity_doneExercises_continueButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>





























